--- a/WebSite/StaticContent/app/templates/app.html
+++ b/WebSite/StaticContent/app/templates/app.html
@@ -1,49 +1,63 @@
-﻿<div class="row learning-body">
-    <div *ngIf="userName">
-
-        <!-- desctop -->
-        <div class="visible-desktop col-md-2"  (window:resize)="resized($event)">
-            <div class="learning-main-background menu-header">
-                <div class="menu-header-user-name">
-                    <span class="glyphicon glyphicon-user"></span>
-                    {{userName}}
-                    <div>
-                        <span><a class="log-out-link" href="/account/SignOff">Log out</a></span>
-                    </div>
+﻿<div class="container">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle responsive-menu-button" data-toggle="collapse" data-target="#responsive-menu">
+                        <span class="sr-only">Open menu</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
-                <div class="header-server-message">
-                    {{applicationMessage}}
-                </div>
-                <div class="menu-tabs">
-                    <div>
-                        <a class="menu-tab" routerLink="/home" routerLinkActive="menu-tab-active">Home</a>
-                    </div>
-                    <div>
-                        <a class="menu-tab" routerLink="/add-word" routerLinkActive="menu-tab-active">Add word</a>
-                    </div>
-                    <div>
-                        <a class="menu-tab" routerLink="/my-words" routerLinkActive="menu-tab-active">My words</a>
-                    </div>
-                    <div>
-                        <a class="menu-tab" routerLink="/picker-test" routerLinkActive="menu-tab-active">Picker test</a>
-                    </div>
+                <div class="collapse navbar-collapse" id="responsive-menu">
+                    <ul class="nav navbar-nav responsive-menu ">
+                        <li>
+                            <a routerLink="/home" routerLinkActive="active-menu-item">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a routerLink="/add-word" routerLinkActive="active-menu-item">
+                                Add word
+                            </a>
+                        </li>
+                        <li>
+                            <a routerLink="/my-words" routerLinkActive="active-menu-item">
+                                My words
+                            </a>
+                        </li>
+                        <li>
+                            <a routerLink="/picker-test" routerLinkActive="active-menu-item">
+                                Picker test
+                            </a>
+                        </li>
+                    </ul>
+                    <span>
+                        <ul class="nav navbar-nav navbar-right responsive-menu ">
+                            <li class="divider"></li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                                    {{userName}}
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/account/SignOff">
+                                   <i class="fa fa-sign-out" aria-hidden="true"></i>
+                                   Log out
+                                </a>
+                            </li>
+                        </ul>
+                    </span>
                 </div>
             </div>
-         </div>
-
-        <!-- mobile -->
-        <div class="visible-phone visible-tablet" >
-            <a class="btn btn-orange mobile-home-button" routerLink="/home">
-                <span class="glyphicon glyphicon-align-justify"></span>
-            </a>
-        </div>
     </div>
-    
-    <div [hidden]="!userName" [class.col-md-10]="desktopMode" [class.mobile-body]="!desktopMode">
+    <div class="tew-body">
+        <div [style.visibility]="showLoading ? 'visible' : 'hidden'">
+            <loading-animation></loading-animation>
+        </div>
+
         <router-outlet></router-outlet>
     </div>
 </div>
 
-<div *ngIf="!userName" class="row">
-    <loading-animation></loading-animation>
-</div>
