--- a/WebSite/Views/Account/SignUp.cshtml
+++ b/WebSite/Views/Account/SignUp.cshtml
@@ -8,7 +8,7 @@
 @model SignUpModel
 
 
-<div class="margin-30">
+<div class="container">
     <h2>Sign up</h2>
     <br/>
 
@@ -25,7 +25,7 @@
 					@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
 					@Html.ValidationMessageFor(m => m.Email)
 				</div>
-                <br/>
+        <br/>
 
 				<div class="editor-label">
 					@Html.LabelFor(m => m.Password)
@@ -34,7 +34,7 @@
 					@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
 					@Html.ValidationMessageFor(m => m.Password)
 				</div>
-                <br />
+        <br />
 
 				<div class="editor-label">
 					@Html.LabelFor(m => m.ConfirmPassword)
@@ -43,10 +43,12 @@
 					@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
 					@Html.ValidationMessageFor(m => m.ConfirmPassword)
 				</div>
-                <br />
+        <br />
 
-				<input class="btn btn-info" type="submit" value="Sign Up" />
+				<input class="btn btn-success" type="submit" value="Sign Up" />
+				@Html.ActionLink("Sign in", "SignIn", new { }, new { @class = "btn btn-primary" })
 			</fieldset>
 		</div>
 	}
+
 </div>
