--- a/WebSite/StaticContent/app/templates/home.html
+++ b/WebSite/StaticContent/app/templates/home.html
@@ -34,3 +34,10 @@
         <br/>
     </div>
 </div>
+
+<div>
+    <modal-window [windowConfig]="modalConfig" (windowApplied)="modalApplied($event)"></modal-window>
+    <div>
+        <button class="btn btn-success" type="button" data-toggle="modal" data-target="#modal-window">Open</button>
+    </div>
+</div>
