--- a/WebSite/StaticContent/app/templates/home.html
+++ b/WebSite/StaticContent/app/templates/home.html
@@ -38,6 +38,7 @@
 <div>
     <modal-window [windowConfig]="modalConfig" (windowApplied)="modalApplied($event)"></modal-window>
     <div>
-        <button class="btn btn-success" type="button" data-toggle="modal" data-target="#modal-window">Open</button>
+        <button (click)="setModalWindow1()" class="btn btn-success" type="button" data-toggle="modal" data-target="#tew-modal-window">Open 1</button>
+        <button (click)="setModalWindow2()" class="btn btn-success" type="button">Open 2</button>
     </div>
 </div>
