added level reset

--- a/WebSite/StaticContent/app/templates/home.html
+++ b/WebSite/StaticContent/app/templates/home.html
@@ -1,10 +1,10 @@
 ﻿<div>
-   <h2>Tew!!!</h2>
+   <h2>Welcome to Tew!</h2>
 
-   <div>
+   <h3>
         Users: {{usersCount}}
-   </div>
-   <div>
+   </h3>
+   <h3>
         Words: {{wordsCount}}
-   </div>
+   </h3>
 </div>
