--- a/WebSite/StaticContent/app/templates/userStat.html
+++ b/WebSite/StaticContent/app/templates/userStat.html
@@ -1,10 +1,13 @@
  <h1>User stat</h1>
-    <div *ngIf="userStatModel != null">
-        <ul>
-            <li>User email: {{userStatModel.Email}}</li>
-            <li>User nickname: {{userStatModel.NickName}}</li>
-            <li>User WordsLevel: {{userStatModel.WordsLevel}}</li>
-            <li>User ActivityLevel: {{userStatModel.ActivityLevel}}</li>
-            <li>User LastActivityDate: {{userStatModel.LastActivityDate}}</li>
-        </ul>
-    </div>
+<div *ngIf="userStatModel != null">
+    <ul>
+        <li>User email: {{userStatModel.Email}}</li>
+        <li>User nickname: {{userStatModel.NickName}}</li>
+        <li>User WordsLevel: {{userStatModel.WordsLevel}}</li>
+        <li>User ActivityLevel: {{userStatModel.ActivityLevel}}</li>
+        <li>User LastActivityDate: {{userStatModel.LastActivityDate}}</li>
+    </ul>
+</div>
+<div>
+    <button class="btn btn-danger" (click)="resetUserWords()">Reset words level</button>
+</div>
