toggle navbar menu for mobile. fixed colors

--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -193,7 +193,7 @@ acitve link > color: #5af35d
 
 .active-menu-item {
 	font-size: 20px;
-	color: #5af35d !important;
+	color: #a8fba3 !important;
 }
 
 .error-field {
