--- a/WebSite/StaticContent/app/templates/home.html
+++ b/WebSite/StaticContent/app/templates/home.html
@@ -1,10 +1,10 @@
 ﻿<div>
    <h2>Welcome to Tew!</h2>
 
-   <h3>
+   <h3 *ngIf="usersCount">
         Users: {{usersCount}}
    </h3>
-   <h3>
+   <h3 *ngIf="wordsCount">
         Words: {{wordsCount}}
    </h3>
 </div>
