--- a/WebSite/StaticContent/app/templates/app.html
+++ b/WebSite/StaticContent/app/templates/app.html
@@ -27,9 +27,25 @@
                                 My words
                             </a>
                         </li>
-                        <li>
-                            <a routerLink="/picker-test" routerLinkActive="active-menu-item">
-                                Picker test
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Tests
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                     <a class="navbar-dropdown-menu-item" routerLink="/picker-test" routerLinkActive="active-menu-item">
+                                        Picker test
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="navbar-dropdown-menu-item" href="#">Write test</a>
+                                </li>
+                            </ul>
+                        </li>
+                         <li>
+                            <a routerLink="/irregular-verbs" routerLinkActive="active-menu-item">
+                                Irregular verbs
                             </a>
                         </li>
                     </ul>
