fixed font-size for myWords page

--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -316,3 +316,7 @@ acitve link > color: #5af35d
 .irregular-verbs-rus {
     font: bold italic 130% serif;
 }
+
+.my-words-tr {
+    font-size: 17px;
+}
