--- a/WebSite/StaticContent/app/templates/myWords.html
+++ b/WebSite/StaticContent/app/templates/myWords.html
@@ -18,7 +18,7 @@
                 </tr>
             </thead>
             <tbody *ngFor="let word of userWords.Words;">
-                <tr [hidden]="word.Hidden">
+                <tr [hidden]="word.Hidden" class="my-words-tr">
                     <td>
                         <i class="fa fa-times fa-lg cursor-pointer" aria-hidden="true" (click)="removeWord(word)"></i>
                     </td>
