fix color of active list item

--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -246,7 +246,7 @@ acitve link > color: #5af35d
 
 .active-list-item {
     background-color: #737272;
-    color: black;
+    color: white;
 }
 
 .cursor-pointer {
