fix bug with add words. add event for close of modal

--- a/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/modalWindow.html
@@ -3,7 +3,7 @@
         <div class="modal-dialog">
             <div class="modal-content modal-sm">
                 <div class="modal-header">
-                    <button class="close" type="button" data-dismiss="modal">
+                    <button class="close" type="button" data-dismiss="modal" (click)="closeWindow()">
                         <i class="fa fa-close"></i>
                     </button>
                     <div class="modal-title tew-modal-title">{{config.headerText}}</div>
