fix UI design (userStat, links)

--- a/WebSite/StaticContent/app/templates/app.html
+++ b/WebSite/StaticContent/app/templates/app.html
@@ -12,11 +12,11 @@
                 </div>
                 <div class="collapse navbar-collapse" id="responsive-menu">
                     <ul class="nav navbar-nav responsive-menu ">
-                        <li>
+                        <!--<li>
                             <a routerLink="/home" routerLinkActive="active-menu-item">
                                 Home
                             </a>
-                        </li>
+                        </li>-->
                         <li>
                             <a routerLink="/add-word" routerLinkActive="active-menu-item">
                                 Add word
@@ -39,7 +39,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="navbar-dropdown-menu-item" href="#">Write test</a>
+                                    <a class="navbar-dropdown-menu-item" href="#/user-stat">Write test (not available)</a>
                                 </li>
                             </ul>
                         </li>
