--- a/WebSite/StaticContent/app/templates/userStat.html
+++ b/WebSite/StaticContent/app/templates/userStat.html
@@ -2,10 +2,10 @@
 <div *ngIf="userStatModel != null">
     <ul>
         <li>User email: {{userStatModel.Email}}</li>
-        <li>User nickname: {{userStatModel.NickName}}</li>
-        <li>User WordsLevel: {{userStatModel.WordsLevel}}</li>
-        <li>User ActivityLevel: {{userStatModel.ActivityLevel}}</li>
-        <li>User LastActivityDate: {{userStatModel.LastActivityDate}}</li>
+        <!--<li>User nickname: {{userStatModel.NickName}}</li>-->
+        <li>Words level: {{userStatModel.WordsLevel}}</li>
+        <li>Activity level: {{userStatModel.ActivityLevel}}</li>
+        <li>Last activity date: {{userStatModel.LastActivityDate}}</li>
     </ul>
 </div>
 <div>
