--- a/WebSite/StaticContent/app/templates/myWords.html
+++ b/WebSite/StaticContent/app/templates/myWords.html
@@ -17,7 +17,7 @@
                     <th>Example</th>
                 </tr>
             </thead>
-            <tbody *ngFor="let word of userWords.Words;">
+            <tbody *ngFor="let word of words;">
                 <tr [hidden]="word.Hidden" class="my-words-tr">
                     <td>
                         <i class="fa fa-times fa-lg cursor-pointer" aria-hidden="true" (click)="removeWord(word)"></i>
@@ -44,7 +44,7 @@
                     <th>Level</th>
                 </tr>
             </thead>
-            <tbody *ngFor="let word of userWords.Words;">
+            <tbody *ngFor="let word of words;">
                 <tr [hidden]="word.Hidden">
                     <td>
                         <i class="fa fa-times fa-lg cursor-pointer" aria-hidden="true" (click)="removeWord(word)"></i>
