--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -320,3 +320,29 @@ acitve link > color: #5af35d
 .my-words-tr {
     font-size: 17px;
 }
+
+.loading-lock-overlay {
+  margin: 0px; 
+  padding: 0px; 
+  position: fixed; 
+  right: 0px; 
+  top: 0px; 
+  width: 100%; 
+  height: 100%; 
+  background-color: #bfbfbf; 
+  z-index: 30001; 
+  opacity: 0.7;
+}
+
+.loading-lock-message {
+    position: absolute; 
+    color: #191515; 
+    top: 50%; 
+    left: 45%;
+    font-weight: bold;
+}
+
+.loading-lock-text {
+    font-size: 28px;
+    margin-left: 10px;
+}
