--- a/WebSite/StaticContent/app/templates/helpComponents/loadingLockDisplay.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/loadingLockDisplay.html
@@ -1,6 +1,6 @@
 <div class="loading-lock-overlay">
     <div class="loading-lock-message">
-        <i class="fa fa-3x fa-hourglass-o fa-spin" aria-hidden="true"></i>
-        <span class="loading-lock-text">Loading...</span>
+        <i class="fa fa-hourglass-o fa-spin" aria-hidden="true"></i>
+        <span>Loading...</span>
     </div>
 </div>
