add loading after app start

--- a/WebSite/StaticContent/app/templates/components/app.html
+++ b/WebSite/StaticContent/app/templates/components/app.html
@@ -74,6 +74,10 @@
             <loading-animation></loading-animation>
         </div>
 
+        <div *ngIf="isLoading">
+            <loading-lock-display></loading-lock-display>
+        </div>
+
         <router-outlet></router-outlet>
     </div>
 </div>
