code refactoring of back-end

--- a/WebSite/Views/Account/SignIn.cshtml
+++ b/WebSite/Views/Account/SignIn.cshtml
@@ -3,9 +3,7 @@
     ViewBag.Title = "Sign In";
     Layout = "~/Views/Shared/_WebAppLayout.cshtml";
 }
-
-@using TewCloud.Models;
-@model SignInModel
+@model WebSite.Models.SignInModel
 
 <div class="container">
     <h2>Sign in</h2>
