--- a/WebSite/Views/Account/SignUp.cshtml
+++ b/WebSite/Views/Account/SignUp.cshtml
@@ -3,9 +3,7 @@
     ViewBag.Title = "SignUp";
     Layout = "~/Views/Shared/_WebAppLayout.cshtml";
 }
-
-@using TewCloud.Models;
-@model SignUpModel
+@model WebSite.Models.SignUpModel
 
 
 <div class="container">
