--- a/WebSite/StaticContent/app/templates/components/userStat.html
+++ b/WebSite/StaticContent/app/templates/components/userStat.html
@@ -4,7 +4,7 @@
         <li>User email: {{userStatModel.Email}}</li>
         <!--<li>User nickname: {{userStatModel.NickName}}</li>-->
         <li>Words level: {{userStatModel.WordsLevel}}</li>
-        <li>Activity level: {{userStatModel.ActivityLevel}}</li>
+        <!--<li>Activity level: {{userStatModel.ActivityLevel}}</li>-->
         <li>Last activity date: {{userStatModel.LastActivityDate}}</li>
     </ul>
 </div>
