show global error in alert

--- a/WebSite/Views/Tew/Index.cshtml
+++ b/WebSite/Views/Tew/Index.cshtml
@@ -11,6 +11,7 @@
     System.import(main).catch(function (err)
     {
         console.error(err);
+        alert(err);
     });
 </script>
 <!-- END OF INIT SCRIPTS -->
