don't show count of words when loading is active

--- a/WebSite/StaticContent/app/templates/components/myWords.html
+++ b/WebSite/StaticContent/app/templates/components/myWords.html
@@ -1,6 +1,6 @@
 ﻿<div class="center-block page-title">
     My words
-    <span *ngIf="wordsCount > 0"> ({{wordsCount}})</span>
+    <span *ngIf="wordsCount > 0 && isLoading == false"> ({{wordsCount}})</span>
 </div>
 
 <div *ngIf="isLoading">
